--- a/index.html
+++ b/index.html
@@ -17,35 +17,39 @@
 </head>
 
 <body>
-  <nav class="white" role="navigation" style="height: 90px; parallax-slider/background-color: #ebbf50 !important;">
-    <div class="nav-wrapper container">
-      <a id="logo-container" href="https://phpeste.org" class="brand-logo">
-        <img class="img-logo-topo responsive-img" src="images/phpeste_marrom.png" />
-      </a>
 
-      <ul class="right hide-on-med-and-down" style="margin-top: 10px;">
-        <li><a href="https://phpeste.org">Início</a></li>
-        <li><a href="#about">Sobre</a></li>
-        <li><a href="#local">Local</a></li>
-        <li><a href="#speakers">Palestrantes</a></li>
-        <li><a href="#schedule">Programação</a></li>
-        <li><a href="#tickets">Ingressos</a></li>
-        <li><a href="#sponsors">Patrocinadores</a></li>
+  <div class="navbar-fixed">
+  <nav class="white" role="navigation">
+    <div class="nav-wrapper container">
+
+      <ul class="center hide-on-med-and-down">
+        <li><a class="scrollSuave" href="https://phpeste.org">Início</a></li>
+        <li><a class="scrollSuave" href="#about">Sobre</a></li>
+        <li><a class="scrollSuave" href="#local">Local</a></li>
+        <li><a class="scrollSuave" href="#speakers">Palestrantes</a></li>
+        <li><a class="scrollSuave" href="#schedule">Programação</a></li>
+        <li><a class="scrollSuave" href="#tickets">Ingressos</a></li>
+        <li><a class="scrollSuave" href="#sponsors">Patrocinadores</a></li>
+        <li><a class="scrollSuave" href="#code-of-conduct">Código de conduta</a></li>
+        <li><a class="scrollSuave" href="#contact">Contato</a></li>
       </ul>
 
       <ul id="nav-mobile" class="sidenav">
-        <li><a href="https://phpeste.org">Início</a></li>
-        <li><a href="#about">Sobre</a></li>
-        <li><a href="#local">Local</a></li>
-        <li><a href="#speakers">Palestrantes</a></li>
-        <li><a href="#schedule">Programação</a></li>
-        <li><a href="#tickets">Ingressos</a></li>
-        <li><a href="#sponsors">Patrocinadores</a></li>
+        <li><a class="scrollSuave" href="https://phpeste.org">Início</a></li>
+        <li><a class="scrollSuave" href="#about">Sobre</a></li>
+        <li><a class="scrollSuave" href="#local">Local</a></li>
+        <li><a class="scrollSuave" href="#speakers">Palestrantes</a></li>
+        <li><a class="scrollSuave" href="#schedule">Programação</a></li>
+        <li><a class="scrollSuave" href="#tickets">Ingressos</a></li>
+        <li><a class="scrollSuave" href="#sponsors">Patrocinadores</a></li>
+        <li><a class="scrollSuave" href="#code-of-conduct">Código de conduta</a></li>
+        <li><a class="scrollSuave" href="#contact">Contato</a></li>
       </ul>
 
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
   </nav>
+  </div>
 
   <div id="index-banner" class="parallax-container">
     <div class="section no-pad-bot">
@@ -60,7 +64,7 @@
           <h4 class="header col s12 light">6, 7 e 8 de outubro de 2023</h4>
         </div>
         <div class="row center">
-          <a href="#about" class="btn-floating btn-large waves-effect waves-light brown darken-2"><i
+          <a href="#about" class="btn-floating btn-large waves-effect waves-light brown darken-2 scrollSuave"><i
               class="material-icons">arrow_downward</i></a>
         </div>
         <br><br>
@@ -187,6 +191,10 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h5 class="center">UNIFOR | Av. Washington Soares, 1321 - Edson Queiroz, Fortaleza - CE</h4>
+            <br>
+            <p class="light flow-text" style="text-align: center; font-size: 23px;">
+            Informações sobre quais auditórios serão usados em breve!
+            </p>
             <br><br>
         </div>
       </div>
@@ -324,7 +332,7 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <br><br>
-          <a href="#" class="waves-effect waves-light btn-large brown darken-2"><i class="material-icons left">description</i>Saiba mais em nossa apresentação</a>
+          <a href="/files/Midia_Kit_Completo_PT_BR.pdf" class="waves-effect waves-light btn-large brown darken-2"><i class="material-icons left">description</i>Saiba mais em nossa apresentação</a>
             <br><br>
         </div>
       </div>
@@ -334,32 +342,23 @@
 
   <footer class="page-footer brown darken-3">
     <div class="container">
-      <div class="row">
-        <div class="col l4 s12">
-          <img class="responsive-img" src="images/phpeste_claro.png" />
-        </div>
-        <div class="col l4 s12">
-          <h5 class="white-text">Redes Sociais</h5>
-          <ul style="line-height: 2.0rem;">
-            <!-- <li><a class="white-text" href="#!">Twitter</li>
-            <li><a class="white-text" href="#!">Instagram</a></li>
-            <li><a class="white-text" href="#!">Telegram</a></li> -->
-          </ul>
-        </div>
-        <div class="col l4 s12">
-          <h5 class="white-text">Menu</h5>
-          <ul style="line-height: 2.0rem;">
-            <!-- <li><a class="white-text" href="#!">Twitter</li>
-            <li><a class="white-text" href="#!">Instagram</a></li>
-            <li><a class="white-text" href="#!">Telegram</a></li> -->
-          </ul>
-        </div>
-      </div>
       <div class="row center">
         <div class="col l12 s12">
-          <h5 class="white-text">Email:contato@phpeste.org</h5>
+          <img class="responsive-img" src="images/phpeste_claro.png" />
+        </div>
+        <div class="row center">
+          <div class="col l12 s12">
+            <h4 class="white-text">contato@phpeste.org</h4>
+          </div>
+        </div>
+        <div class="col l12 s12">
+          <h5 class="white-text" style="margin-bottom: 20px;">Redes Sociais</h5>
+            <a class="white-text" href="#">Instagram</a>
+            <a style="margin: 30px;" class="white-text" href="#">Twitter</a>
+            <a class="white-text" href="#">Telegram</a>
         </div>
       </div>
+
     </div>
     <div class="footer-copyright">
       <div class="container">
@@ -375,5 +374,13 @@
   <script src="js/init.js"></script>
 
 </body>
-
+<script>
+  let $doc = $('html, body');
+  $('.scrollSuave').click(function() {
+      $doc.animate({
+          scrollTop: $($.attr(this, 'href')).offset().top
+      }, 2000);
+      return false;
+  });
+</script>
 </html>
