adicionando faq, codigo conduta

--- a/index.html
+++ b/index.html
@@ -19,36 +19,38 @@
 <body>
 
   <div class="navbar-fixed">
-  <nav class="white" role="navigation">
-    <div class="nav-wrapper container">
+    <nav class="white" role="navigation"
+      style="background-image: url('images/parallax-slider/background_menu.png'); box-shadow: none;">
+      <div class="nav-wrapper container">
 
-      <ul class="center hide-on-med-and-down">
-        <li><a class="scrollSuave" href="https://phpeste.org">Início</a></li>
-        <li><a class="scrollSuave" href="#about">Sobre</a></li>
-        <li><a class="scrollSuave" href="#local">Local</a></li>
-        <li><a class="scrollSuave" href="#speakers">Palestrantes</a></li>
-        <li><a class="scrollSuave" href="#schedule">Programação</a></li>
-        <li><a class="scrollSuave" href="#tickets">Ingressos</a></li>
-        <li><a class="scrollSuave" href="#sponsors">Patrocinadores</a></li>
-        <li><a class="scrollSuave" href="#code-of-conduct">Código de conduta</a></li>
-        <li><a class="scrollSuave" href="#contact">Contato</a></li>
-      </ul>
+        <ul class="center hide-on-med-and-down">
+          <li><a class="scrollSuave" href="https://phpeste.org">Início</a></li>
+          <li><a class="scrollSuave" href="#about">Sobre</a></li>
+          <li><a class="scrollSuave" href="#local">Local</a></li>
+          <li><a class="scrollSuave" href="#speakers">Palestrantes</a></li>
+          <li><a class="scrollSuave" href="#schedule">Programação</a></li>
+          <li><a class="scrollSuave" href="#tickets">Ingressos</a></li>
+          <li><a class="scrollSuave" href="#sponsors">Patrocinadores</a></li>
+          <li><a class="scrollSuave" href="#code-of-conduct">Código de conduta</a></li>
+          <li><a class="scrollSuave" href="#contact">Contato</a></li>
+        </ul>
 
-      <ul id="nav-mobile" class="sidenav">
-        <li><a class="scrollSuave" href="https://phpeste.org">Início</a></li>
-        <li><a class="scrollSuave" href="#about">Sobre</a></li>
-        <li><a class="scrollSuave" href="#local">Local</a></li>
-        <li><a class="scrollSuave" href="#speakers">Palestrantes</a></li>
-        <li><a class="scrollSuave" href="#schedule">Programação</a></li>
-        <li><a class="scrollSuave" href="#tickets">Ingressos</a></li>
-        <li><a class="scrollSuave" href="#sponsors">Patrocinadores</a></li>
-        <li><a class="scrollSuave" href="#code-of-conduct">Código de conduta</a></li>
-        <li><a class="scrollSuave" href="#contact">Contato</a></li>
-      </ul>
+        <ul id="nav-mobile" class="sidenav">
+          <li><a class="scrollSuave" href="https://phpeste.org">Início</a></li>
+          <li><a class="scrollSuave" href="#about">Sobre</a></li>
+          <li><a class="scrollSuave" href="#local">Local</a></li>
+          <li><a class="scrollSuave" href="#speakers">Palestrantes</a></li>
+          <li><a class="scrollSuave" href="#schedule">Programação</a></li>
+          <li><a class="scrollSuave" href="#tickets">Ingressos</a></li>
+          <li><a class="scrollSuave" href="#sponsors">Patrocinadores</a></li>
+          <li><a class="scrollSuave" href="#code-of-conduct">Código de conduta</a></li>
+          <li><a class="scrollSuave" href="#contact">Contato</a></li>
+        </ul>
 
-      <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
-    </div>
-  </nav>
+        <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons"
+            style="color: #5B1E00;">menu</i></a>
+      </div>
+    </nav>
   </div>
 
   <div id="index-banner" class="parallax-container">
@@ -62,6 +64,8 @@
         <div class="row center text-brown">
           <h3 class="header col s12 light">A maior conferência de PHP do Nordeste!</h3>
           <h4 class="header col s12 light">6, 7 e 8 de outubro de 2023</h4>
+          <h5 class="header col s12 light">Fortaleza - Ceará</h5>
+          <br><br>
         </div>
         <div class="row center">
           <a href="#about" class="btn-floating btn-large waves-effect waves-light brown darken-2 scrollSuave"><i
@@ -71,7 +75,8 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background_slide1.png" alt="PHPeste | Maior conferência PHP do Nordeste">
+    <div class="parallax"><img src="images/parallax-slider/background_slide1.png"
+        alt="PHPeste | Maior conferência PHP do Nordeste">
     </div>
   </div>
 
@@ -84,10 +89,8 @@
         <div class="col s12 m12">
           <div class="icon-block">
             <h1 class="center brown-text">A CONFERÊNCIA</h1>
-            <br>
             <h4 class="center">PHPeste é uma conferência de PHP organizada pelas comunidades “cabra da peste” do
               nordeste brasileiro. </h4>
-            <br>
             <p class="light flow-text" style="text-align: justify; font-size: 23px;">O evento já passou por João Pessoa
               (PB), Salvador (BA), Fortaleza(CE), São Luis(MA), Recife(PE), Natal(RN) e agora volta a Fortaleza(CE).
               Serão 3 dias de muito aprendizado, muita mão na massa e, principalmente, de gente “arretada da peste” que
@@ -168,7 +171,8 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background-natal.jpg" alt="Unsplashed parallax-slider/background img 2"></div>
+    <div class="parallax"><img src="images/parallax-slider/background-natal.jpg"
+        alt="Unsplashed parallax-slider/background img 2"></div>
   </div>
 
   <div class="container">
@@ -193,7 +197,7 @@
           <h5 class="center">UNIFOR | Av. Washington Soares, 1321 - Edson Queiroz, Fortaleza - CE</h4>
             <br>
             <p class="light flow-text" style="text-align: center; font-size: 23px;">
-            Informações sobre quais auditórios serão usados em breve!
+              Informações sobre quais auditórios serão usados em breve!
             </p>
             <br><br>
         </div>
@@ -208,7 +212,8 @@
       <div class="container">
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background-recife.jpg" alt="Unsplashed parallax-slider/background img 3"></div>
+    <div class="parallax"><img src="images/parallax-slider/background-recife.jpg"
+        alt="Unsplashed parallax-slider/background img 3"></div>
   </div>
 
   <div class="container">
@@ -242,7 +247,8 @@
       <div class="container">
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background-saoluis.jpg" alt="Unsplashed parallax-slider/background img 3"></div>
+    <div class="parallax"><img src="images/parallax-slider/background-saoluis.jpg"
+        alt="Unsplashed parallax-slider/background img 3"></div>
   </div>
 
   <div class="container">
@@ -253,7 +259,8 @@
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <h1 class="center brown-text">PROGRAMAÇÃO</h1>
           <br><br>
-          <h4 class="center">Sacalme! em breve divulgaremos os horários de todas as palestras e oficinas (workshops).</h4>
+          <h4 class="center">Sacalme! em breve divulgaremos os horários de todas as palestras e oficinas (workshops).
+          </h4>
           <br><br>
         </div>
       </div>
@@ -275,7 +282,8 @@
       <div class="container">
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background-fortaleza2.jpg" alt="Unsplashed parallax-slider/background img 3"></div>
+    <div class="parallax"><img src="images/parallax-slider/background-fortaleza2.jpg"
+        alt="Unsplashed parallax-slider/background img 3"></div>
   </div>
 
   <div class="container">
@@ -309,7 +317,8 @@
       <div class="container">
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background-fortaleza.jpg" alt="Unsplashed parallax-slider/background img 3"></div>
+    <div class="parallax"><img src="images/parallax-slider/background-fortaleza.jpg"
+        alt="Unsplashed parallax-slider/background img 3"></div>
   </div>
 
   <div class="container">
@@ -323,7 +332,11 @@
           <h4 class="center">Por que apoiar a PHPeste?</h4>
           <br><br>
           <p class="light flow-text" style="text-align: justify; font-size: 23px;">
-            A conferência reúne um público diverso composto por pessoas desenvolvedoras, arquitetas, engenheiras de software, gerentes de TI, entusiastas e empresárias de todo o nordeste. Apoiar a PHPeste é associar a sua marca a iniciativas colaborativas e um ambiente de aprendizagem que estimula o desenvolvimento tecnológico do país. Além da visibilidade, é uma ótima forma de capacitar sua equipe, oferecer propostas, recrutar profissionais e criar parcerias de negócio.
+            A conferência reúne um público diverso composto por pessoas desenvolvedoras, arquitetas, engenheiras de
+            software, gerentes de TI, entusiastas e empresárias de todo o nordeste. Apoiar a PHPeste é associar a sua
+            marca a iniciativas colaborativas e um ambiente de aprendizagem que estimula o desenvolvimento tecnológico
+            do país. Além da visibilidade, é uma ótima forma de capacitar sua equipe, oferecer propostas, recrutar
+            profissionais e criar parcerias de negócio.
           </p>
         </div>
       </div>
@@ -332,15 +345,111 @@
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
           <br><br>
-          <a href="/files/Midia_Kit_Completo_PT_BR.pdf" class="waves-effect waves-light btn-large brown darken-2"><i class="material-icons left">description</i>Saiba mais em nossa apresentação</a>
-            <br><br>
+          <a href="/files/Midia_Kit_Completo_PT_BR.pdf" class="waves-effect waves-light btn-large brown darken-2"><i
+              class="material-icons left">description</i>Saiba mais em nossa apresentação</a>
+          <br><br>
         </div>
       </div>
 
     </div>
   </div>
 
-  <footer class="page-footer brown darken-3">
+  <div class="parallax-container valign-wrapper">
+    <div class="section no-pad-bot">
+      <div class="container">
+      </div>
+    </div>
+    <div class="parallax"><img src="images/parallax-slider/background-salvador.jpg"
+        alt="Unsplashed parallax-slider/background img 3"></div>
+  </div>
+
+  <div class="container">
+    <div class="section" id="code-of-conduct">
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h1 class="center brown-text">CÓDIGO DE CONDUTA</h1>
+          <p class="light flow-text" style="text-align: justify; font-size: 23px;">
+            A Conferência PHPeste está comprometida a ser livre de discriminação para todos, independente de gênero,
+            identidade e expressão de gênero, orientação sexual, deficiência, aparência física, raça, idade, origem ou
+            religião. Não será tolerado, sob nenhuma circunstância, o constrangimento de participantes em eventos e
+            canais organizados pela comunidade. Linguagem e/ou exposição de imagens sexuais ou de cunho discriminatório
+            não serão apropriadas no âmbito de nossa comunidade - isto inclui os eventos, as palestras, apresentações,
+            exemplos e demonstrações, site, e-mails, chat e quaisquer outro canal da comunidade. Os participantes que
+            violarem essas regras podem ser repreendidos ou expulsos do canal e/ou evento sem direito a reembolso, a
+            critério da organização. Entendemos como assédio e constrangimento: Comentários que reforçam estruturas
+            sociais de dominação, sejam relacionados a gênero, identidade e expressão de gênero, orientação sexual,
+            deficiência, aparência física, raça, idade, origem ou religião;
+            <br> - Imagens sexuais em espaços públicos;
+            <br> - Comentários de cunho sexual;
+            <br> - Intimidação intencional;
+            <br> - Perseguição;
+            <br> - Obtenção de som ou imagem constrangedores;
+            <br> - Interrupção continuada e intencional de palestras e/ou eventos paralelos;
+            <br> - Contato físico inapropriado; atenção sexual não solicitada;<br><br>
+            Se você estiver sendo assediado(a) ou se sentir constrangido(a), ou perceber alguém nesta condição, ou se
+            tiver qualquer preocupação a respeito deste tema, não deixe de contatar um dos evangelistas da comunidade
+            imediatamente. As pessoas responsáveis pela organização em eventos serão apresentadas ao início dos eventos
+            e podem ser facilmente identificadas por camisetas e/ou crachás. Nos canais oficiais da comunidade procure
+            um dos evangelistas da comunidade. Embora o desejo seja de que isso não venha a ser necessário, caso seja
+            preciso a organização ajudará os participantes no contato com a segurança do local ou com a polícia ou mesmo
+            providenciando escolta. Faremos o possível para que todos sintam-se confortáveis e seguros.
+            <br>
+            Contamos com sua compreensão e participação.
+            <br>
+            <br> - Contato: contato@phpeste.org
+            <br> - Polícia: 190
+            <br> - Central de Atendimento à Mulher: 180
+            <br> - SAMU: 192<br>
+            <br>
+
+            Créditos e fonte original: PHPSP
+            <br>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="section" id="faq">
+
+      <div class="row">
+        <div class="col s12 center">
+          <h3><i class="mdi-content-send brown-text"></i></h3>
+          <h1 class="center brown-text">Perguntas frequentes (FAQ)</h1>
+          <p class="light flow-text" style="text-align: justify; font-size: 23px;">
+            1 - Como faço para me inscrever no evento?
+            <br><u><i>Inscrições estarão disponíveis em agosto de 2023</i></u>
+            <br>2 - Quem pode participar do evento?
+            <br><u><i>PHPeste é uma conferência para quem deseja conhecer e aprofundar seus conhecimentos na linguagem
+                de programação PHP. Não importa se você é iniciante ou sênior. Este evento é para você!</i></u>
+            <br>3 - Tenho direito a certificado?
+            <br><u><i>Sim, desde que você tenha feito check-in. O certificado será encaminhado em até 48h após o
+                encerramento do evento por e-mail.</i></u>
+            <br>4 - Terei direito a almoço no evento?
+            <br><u><i>Não. O almoço será por conta de cada participante. Haverá um horário livre para o almoço.</i></u>
+            <br>5 - Haverá estacionamento no local?
+            <br><u><i>Não, cada participante deverá se responsabilizar pela escolha de estacionamento na rua ou privado
+                na redondezas do local do evento.</i></u>
+            <br>6 - Poderei fazer a inscrição no dia do evento direto no local?
+            <br><u><i>A quantidade de lugares é limitada, por isso não garantimos a inscrição no dia do evento.</i></u>
+            <br>7 - Como entrar em contato com a organização?
+            <br><u><i>Se você ou a sua empresa quer patrocinar a conferência, vem falar com a gente através do
+                contato@phpeste.org</i></u>
+          </p>
+          <br><br>
+          </p>
+          <br><br>
+          <h1 class="center brown-text">Aproveitem saudavelmente o evento!</h1>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+  <footer class="page-footer brown darken-3" id="contact">
     <div class="container">
       <div class="row center">
         <div class="col l12 s12">
@@ -353,16 +462,23 @@
         </div>
         <div class="col l12 s12">
           <h5 class="white-text" style="margin-bottom: 20px;">Redes Sociais</h5>
-            <a class="white-text" href="#">Instagram</a>
-            <a style="margin: 30px;" class="white-text" href="#">Twitter</a>
-            <a class="white-text" href="#">Telegram</a>
+          <a class="white-text" target="_blank" href="https://instagram.com/phpeste">Instagram</a>
+          <a style="margin: 30px;" class="white-text" target="_blank" href="https://twitter.com/phpestene">Twitter</a>
+          <a class="white-text" target="_blank" href="https://t.me/phpeste">Telegram</a>
         </div>
       </div>
 
     </div>
-    <div class="footer-copyright">
+    <div class="footer-copyright brown darken-4">
       <div class="container">
-        Made by <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+        <div class="row center" style="margin-top: 15px;">
+          <div class="col s12 m6">
+            Thanks to <a class="brown-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+          </div>
+          <div class="col s12 m6">
+            PHPeste 2023 | Fortaleza - Ceará - Brasil.
+          </div>
+        </div>
       </div>
     </div>
   </footer>
@@ -376,11 +492,12 @@
 </body>
 <script>
   let $doc = $('html, body');
-  $('.scrollSuave').click(function() {
-      $doc.animate({
-          scrollTop: $($.attr(this, 'href')).offset().top
-      }, 2000);
-      return false;
+  $('.scrollSuave').click(function () {
+    $doc.animate({
+      scrollTop: $($.attr(this, 'href')).offset().top
+    }, 2000);
+    return false;
   });
 </script>
+
 </html>
