--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-site-verification" content="goV8Sr0Oyft81BUbaI82a-QVJYOATmgNBmPMmLVPY_M" />
   <title>PHPeste | Maior conferência PHP do Nordeste</title>
 
   <!-- CSS  -->
