add images webp

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 <body>
 
   <div class="navbar-fixed">
-    <nav class="white" role="navigation"
-      style="background-image: url('images/parallax-slider/background_menu.png'); box-shadow: none;">
+    <nav role="navigation"
+      style="background-image: url('images/parallax-slider/background-menu-1.webp'); box-shadow: none;">
       <div class="nav-wrapper container">
 
         <ul class="center hide-on-med-and-down">
@@ -76,7 +76,7 @@
 
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background_slide1.png"
+    <div class="parallax"><img src="images/parallax-slider/background-slide1.webp"
         alt="PHPeste | Maior conferência PHP do Nordeste">
     </div>
   </div>
@@ -172,7 +172,7 @@
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background-natal.jpg"
+    <div class="parallax"><img src="images/parallax-slider/background-natal.webp"
         alt="Unsplashed parallax-slider/background img 2"></div>
   </div>
 
@@ -213,7 +213,7 @@
       <div class="container">
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background-recife.jpg"
+    <div class="parallax"><img src="images/parallax-slider/background-recife.webp"
         alt="Unsplashed parallax-slider/background img 3"></div>
   </div>
 
@@ -248,7 +248,7 @@
       <div class="container">
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background-saoluis.jpg"
+    <div class="parallax"><img src="images/parallax-slider/background-saoluis.webp"
         alt="Unsplashed parallax-slider/background img 3"></div>
   </div>
 
@@ -283,7 +283,7 @@
       <div class="container">
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background-fortaleza2.jpg"
+    <div class="parallax"><img src="images/parallax-slider/background-fortaleza2.webp"
         alt="Unsplashed parallax-slider/background img 3"></div>
   </div>
 
@@ -318,7 +318,7 @@
       <div class="container">
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background-fortaleza.jpg"
+    <div class="parallax"><img src="images/parallax-slider/background-fortaleza.webp"
         alt="Unsplashed parallax-slider/background img 3"></div>
   </div>
 
@@ -360,7 +360,7 @@
       <div class="container">
       </div>
     </div>
-    <div class="parallax"><img src="images/parallax-slider/background-salvador.jpg"
+    <div class="parallax"><img src="images/parallax-slider/background-salvador.webp"
         alt="Unsplashed parallax-slider/background img 3"></div>
   </div>
 
