corrigindo os titulos

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="row">
         <div class="col s12 m12">
           <div class="icon-block">
-            <h1 class="center brown-text">A CONFERÊNCIA</h1>
+            <h3 class="center brown-text">A CONFERÊNCIA</h3>
             <h4 class="center">PHPeste é uma conferência de PHP organizada pelas comunidades “cabra da peste” do
               nordeste brasileiro. </h4>
             <p class="light flow-text" style="text-align: justify; font-size: 23px;">O evento já passou por João Pessoa
@@ -180,9 +180,8 @@
     <div class="section" id="local">
 
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h1 class="center brown-text">LOCAL</h1>
+        <div class="col s12 m12 center">
+          <h3 class="center brown-text">LOCAL</h3>
           <br><br>
           <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d127380.79914988465!2d-38.66181726355335!3d-3.8849889609358117!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7c745fe9c03245d%3A0xd435fd5a6bfbbe44!2sUNIFOR%20-%20Universidade%20de%20Fortaleza!5e0!3m2!1spt-BR!2sbr!4v1680637731103!5m2!1spt-BR!2sbr"
@@ -193,8 +192,7 @@
       </div>
 
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
+        <div class="col s12 m12 center">
           <h5 class="center">UNIFOR | Av. Washington Soares, 1321 - Edson Queiroz, Fortaleza - CE</h4>
             <br>
             <p class="light flow-text" style="text-align: center; font-size: 23px;">
@@ -221,9 +219,8 @@
     <div class="section" id="speakers">
 
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h1 class="center brown-text">PALESTRANTES</h1>
+        <div class="col s12 m12 center">
+          <h3 class="center brown-text">PALESTRANTES</h3>
           <br><br>
           <h4 class="center">Se avexe não minha jóia em breve divulgaremos as autarquias que irão compartilhar conteúdo.
           </h4>
@@ -232,8 +229,7 @@
       </div>
 
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
+        <div class="col s12 m12 center">
           <br><br>
           <h5 class="center">Adicionar imagem de cordel pessoa deitada na rede.</h4>
             <br><br>
@@ -256,9 +252,8 @@
     <div class="section" id="schedule">
 
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h1 class="center brown-text">PROGRAMAÇÃO</h1>
+        <div class="col s12 m12 center">
+          <h3 class="center brown-text">PROGRAMAÇÃO</h3>
           <br><br>
           <h4 class="center">Sacalme! em breve divulgaremos os horários de todas as palestras e oficinas (workshops).
           </h4>
@@ -267,8 +262,7 @@
       </div>
 
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
+        <div class="col s12 m12 center">
           <br><br>
           <h5 class="center">Adicionar imagem de cordel pessoa olhando relógio.</h4>
             <br><br>
@@ -291,9 +285,8 @@
     <div class="section" id="tickets">
 
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h1 class="center brown-text">INGRESSOS</h1>
+        <div class="col s12 m12 center">
+          <h3 class="center brown-text">INGRESSOS</h3>
           <br><br>
           <h4 class="center">Foi mal ai deizano! mas ainda não temos ingressos disponíveis a venda, teremos em breve!
           </h4>
@@ -302,8 +295,7 @@
       </div>
 
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
+        <div class="col s12 m12 center">
           <br><br>
           <h5 class="center">Adicionar imagem de cordel pessoa com dinheiro.</h4>
             <br><br>
@@ -326,9 +318,8 @@
     <div class="section" id="sponsors">
 
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h1 class="center brown-text">PATROCINADORES</h1>
+        <div class="col s12 m12 center">
+          <h3 class="center brown-text">PATROCINADORES</h3>
           <br><br>
           <h4 class="center">Por que apoiar a PHPeste?</h4>
           <br><br>
@@ -343,8 +334,7 @@
       </div>
 
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
+        <div class="col s12 m12 center">
           <br><br>
           <a href="/files/Midia_Kit_Completo_PT_BR.pdf" class="waves-effect waves-light btn-large brown darken-2"><i
               class="material-icons left">description</i>Saiba mais em nossa apresentação</a>
@@ -368,9 +358,8 @@
     <div class="section" id="code-of-conduct">
 
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h1 class="center brown-text">CÓDIGO DE CONDUTA</h1>
+        <div class="col s12 m12 center">
+          <h3 class="center brown-text">CÓDIGO DE CONDUTA</h3>
           <p class="light flow-text" style="text-align: justify; font-size: 23px;">
             A Conferência PHPeste está comprometida a ser livre de discriminação para todos, independente de gênero,
             identidade e expressão de gênero, orientação sexual, deficiência, aparência física, raça, idade, origem ou
@@ -417,9 +406,8 @@
     <div class="section" id="faq">
 
       <div class="row">
-        <div class="col s12 center">
-          <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h1 class="center brown-text">Perguntas frequentes (FAQ)</h1>
+        <div class="col s12 m12 center">
+          <h3 class="center brown-text">Perguntas frequentes (FAQ)</h3>
           <p class="light flow-text" style="text-align: justify; font-size: 23px;">
             1 - Como faço para me inscrever no evento?
             <br><u><i>Inscrições estarão disponíveis em agosto de 2023</i></u>
@@ -443,7 +431,7 @@
           <br><br>
           </p>
           <br><br>
-          <h1 class="center brown-text">Aproveitem saudavelmente o evento!</h1>
+          <h3 class="center brown-text">Aproveitem saudavelmente o evento!</h3>
         </div>
       </div>
 
