--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 </head>
 
 <body>
-
+  <div id="loading"></div>
+  <div class="page">
   <div class="navbar-fixed">
     <nav role="navigation"
       style="background-image: url('images/parallax-slider/background-menu-1.webp'); box-shadow: none;">
@@ -471,7 +472,7 @@
       </div>
     </div>
   </footer>
-
+  </div>
 
   <!--  Scripts-->
   <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
@@ -487,6 +488,7 @@
     }, 2000);
     return false;
   });
+
 </script>
 
 </html>
