--- a/index.html
+++ b/index.html
@@ -266,15 +266,10 @@
             <h4 class="center">Se avexe não minha jóia em breve divulgaremos as autarquias que irão compartilhar
               conteúdo.
             </h4>
-            <br><br>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col s12 m12 center">
-            <br><br>
-            <h5 class="center">Adicionar imagem de cordel pessoa deitada na rede.</h4>
-              <br><br>
+            <img src="images/cordel/palestrantes.webp" 
+              title="Figura no formato de literatura de cordel homen de pé apontando para tela de projeção despertar o conhecimento da web para plateia presente"
+              alt="Figura no formato de literatura de cordel homen de pé apontando para tela de projeção despertar o conhecimento da web para plateia presente"
+              />
           </div>
         </div>
 
@@ -301,15 +296,10 @@
             <br><br>
             <h4 class="center">Sacalme! em breve divulgaremos os horários de todas as palestras e oficinas (workshops).
             </h4>
-            <br><br>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col s12 m12 center">
-            <br><br>
-            <h5 class="center">Adicionar imagem de cordel pessoa olhando relógio.</h4>
-              <br><br>
+            <img src="images/cordel/programacao.webp" 
+              title="Figura no formato de literatura de cordel homen de pé apontando pro desperator cuco antigo e mulher no computador navegando na internet"
+              alt="Figura no formato de literatura de cordel homen de pé apontando pro desperator cuco antigo e mulher no computador navegando na internet"
+              />
           </div>
         </div>
 
@@ -386,7 +376,7 @@
         <div class="row">
           <div class="col s12 m12 center">
             <br><br>
-            <a href="/files/Midia_Kit_Completo_PT_BR.pdf" class="waves-effect waves-light btn-large brown darken-2"><i
+            <a href="/files/Midia_Kit_Completo_PT_BR.pdf" target="_blank" class="waves-effect waves-light btn-large brown darken-2"><i
                 class="material-icons left">description</i>Saiba mais em nossa apresentação</a>
             <br><br>
           </div>
