--- a/index.html
+++ b/index.html
@@ -327,18 +327,12 @@
             <br><br>
             <h4 class="center">Foi mal ai deizano! mas ainda não temos ingressos disponíveis a venda, teremos em breve!
             </h4>
-            <br><br>
+            <img src="images/cordel/ingressos.webp" 
+            title="Figura no formato de literatura de cordel homen no balcão da budega (comercio no nordeste) antiga esperando os clientes"
+            alt="Figura no formato de literatura de cordel homen no balcão da budega (comercio no nordeste) antiga esperando os clientes"
+            />
           </div>
         </div>
-
-        <div class="row">
-          <div class="col s12 m12 center">
-            <br><br>
-            <h5 class="center">Adicionar imagem de cordel pessoa com dinheiro.</h4>
-              <br><br>
-          </div>
-        </div>
-
       </div>
     </div>
 
