ajustando o site name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta name="author" content="Comunidade PHP com Rapadura">
   <meta name="creator" content="Comunidade PHP com Rapadura">
 
-  <meta property="og:site_name" content="Neil Patel">
+  <meta property="og:site_name" content="PHPeste.org">
   <meta property="og:locale" content="pt_BR">
   <meta property="og:type" content="website">
   <meta property="og:title" content="PHPeste 2023 | Fortaleza - Ceará - Brasil.">
