add class responsive nas imagens de cordel

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <h4 class="center">Se avexe não minha jóia em breve divulgaremos as autarquias que irão compartilhar
               conteúdo.
             </h4>
-            <img src="images/cordel/palestrantes.webp" 
+            <img class="responsive-img" src="images/cordel/palestrantes.webp" 
               title="Figura no formato de literatura de cordel homen de pé apontando para tela de projeção despertar o conhecimento da web para plateia presente"
               alt="Figura no formato de literatura de cordel homen de pé apontando para tela de projeção despertar o conhecimento da web para plateia presente"
               />
@@ -296,7 +296,7 @@
             <br><br>
             <h4 class="center">Sacalme! em breve divulgaremos os horários de todas as palestras e oficinas (workshops).
             </h4>
-            <img src="images/cordel/programacao.webp" 
+            <img class="responsive-img" src="images/cordel/programacao.webp" 
               title="Figura no formato de literatura de cordel homen de pé apontando pro desperator cuco antigo e mulher no computador navegando na internet"
               alt="Figura no formato de literatura de cordel homen de pé apontando pro desperator cuco antigo e mulher no computador navegando na internet"
               />
@@ -327,7 +327,7 @@
             <br><br>
             <h4 class="center">Foi mal ai deizano! mas ainda não temos ingressos disponíveis a venda, teremos em breve!
             </h4>
-            <img src="images/cordel/ingressos.webp" 
+            <img class="responsive-img" src="images/cordel/ingressos.webp" 
             title="Figura no formato de literatura de cordel homen no balcão da budega (comercio no nordeste) antiga esperando os clientes"
             alt="Figura no formato de literatura de cordel homen no balcão da budega (comercio no nordeste) antiga esperando os clientes"
             />
